--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.3.*",
         "tymon/jwt-auth": "0.5.*",
         "dingo/api": "1.0.x@dev",
-        "barryvdh/laravel-cors": "^0.8.2"
+        "barryvdh/laravel-cors": "0.8.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
